--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
     <button id="loadQuote">Show another quote</button>
 
   </div>
-  <script src = "js/ex.js"></script>
+  <script src = "js/ARProject1.js"></script>
 </body>
 </html>
